...
    <string name="set_goal">Daily step goal</string>
    <string name="set_goal_value">%1$s steps</string>
    <string name="set_notifications">Notifications</string>
    <string name="set_privacy">Privacy &amp; permissions</string>
    <string name="set_language">Language</string>
    <string name="set_theme">Theme</string>
    <string name="set_experience">Sound, vibration &amp; motion</string>
    <string name="set_connected">Connected accounts</string>
    <string name="set_support">Help &amp; contact</string>
    <string name="set_follow_device">Device</string>
    <string name="set_loading">Loading your settings.</string>
    <string name="set_load_failed">Couldn\'t load your settings</string>
    <string name="set_load_failed_body">Your previous settings weren\'t changed.</string>
...
